[gd_scene load_steps=2 format=3 uid="uid://12l3t3mdb0ha"]

[ext_resource type="Script" path="res://hud.gd" id="1_r6nc3"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_r6nc3")

[node name="GameOver" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -13.0
offset_right = 46.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Game Over!"

[node name="Choose" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -253.5
offset_top = -140.0
offset_right = 253.5
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Choose Carefully!"

[node name="YouWin" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -253.5
offset_top = -43.0
offset_right = 253.5
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "You Win!"
horizontal_alignment = 1

[node name="Mute" type="CheckButton" parent="."]
offset_left = 11.0
offset_top = 4.0
offset_right = 130.0
offset_bottom = 51.0
theme_override_font_sizes/font_size = 28
text = "Mute"

[node name="Restart" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -53.0
offset_top = 10.0
offset_right = 53.0
offset_bottom = 57.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 28
text = "Restart"

[node name="Quit" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -75.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 55.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 28
text = "Quit"

[connection signal="toggled" from="Mute" to="." method="_on_mute_toggled"]
[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
